--- a/index.html
+++ b/index.html
@@ -1,141 +1,242 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cs" lang="cs">
+<!DOCTYPE html>
+<html>
+
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>RubyX</title>
-<link rel="stylesheet" media="screen,projection" type="text/css" href="css/main.css" />
-<link rel="stylesheet" media="print" type="text/css" href="css/print.css" />
-<link rel="stylesheet" media="aural" type="text/css" href="css/aural.css" />
-</head>
-<body id="www-url-cz">
-<div id="main" class="box">
-  <div id="header">
-    <h1 id="logo"><a href="#">Ruby<strong>X</strong><span></span></a></h1>
-    <hr class="noscreen" />
-    <div class="noscreen noprint">
-      <p><em>Quick links: <a href="#content">content</a>, <a href="#tabs">navigation</a>, <a href="#search">search</a>.</em></p>
-      <hr />
-    </div>
-    <div id="search" class="noprint">
-      <form action="#" method="get">
-        <fieldset>
-        <legend>Search</legend>
-        <label><span class="noscreen">Find:</span> <span id="search-input-out">
-        <input type="text" name="" id="search-input" size="30" />
-        </span></label>
-        <input type="image" src="design/search_submit.gif" id="search-submit" value="OK" />
-        </fieldset>
-      </form>
-    </div>
-  </div>
-  <div id="tabs" class="noprint">
-    <h3 class="noscreen">Navigation</h3>
-    <ul class="box">
-      <li><a href="#">Home<span class="tab-l"></span><span class="tab-r"></span></a></li>
-      <li id="active"><a href="#">Weblog<span class="tab-l"></span><span class="tab-r"></span></a></li>
-      <li><a href="#">About Me<span class="tab-l"></span><span class="tab-r"></span></a></li>
-      <li><a href="#">Photos<span class="tab-l"></span><span class="tab-r"></span></a></li>
-      <li><a href="#">Portfolio<span class="tab-l"></span><span class="tab-r"></span></a></li>
-      <li><a href="#">Contact<span class="tab-l"></span><span class="tab-r"></span></a></li>
-      <li><a href="#">Links<span class="tab-l"></span><span class="tab-r"></span></a></li>
-    </ul>
-    <hr class="noscreen" />
-  </div>
-  <div id="page" class="box">
-    <div id="page-in" class="box">
-      <div id="strip" class="box noprint">
-        <p id="rss"><strong>RSS:</strong> <a href="#">articles</a> / <a href="#">comments</a></p>
-        <hr class="noscreen" />
-        <p id="breadcrumbs">You are here: <a href="#">Home</a> &gt; <a href="#">Category</a> &gt; <strong>Page</strong></p>
-        <hr class="noscreen" />
-      </div>
-      <div id="content">
-        <div class="article">
-          <h2><span><a href="#">This is my best article</a></span></h2>
-          <p class="info noprint"> <span class="date">2007-01-01 @ 00:01</span><span class="noscreen">,</span> <span class="cat"><a href="#">Category</a></span><span class="noscreen">,</span> <span class="user"><a href="#">My name</a></span><span class="noscreen">,</span> <span class="comments"><a href="#">Comments</a></span> </p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam pellentesque enim blandit enim bibendum blandit. Integer eu leo ac est aliquet imperdiet. Quisque nec justo id augue posuere malesuada. Nullam ac metus. Cras non leo ut est placerat condimentum. Aliquam ut enim. Quisque non sapien in enim eleifend faucibus. Pellentesque sodales. Mauris auctor arcu sit amet felis. Donec eget enim ut lacus pharetra condimentum. Nulla in felis vel tortor imperdiet consectetuer. Sed id ante.</p>
-          <p class="btn-more box noprint"><strong><a href="#">Continue</a></strong></p>
-        </div>
-        <hr class="noscreen" />
-        <div class="article">
-          <h2><span><a href="#">This is my third article</a></span></h2>
-          <p class="info noprint"> <span class="date">2007-01-01 @ 00:01</span><span class="noscreen">,</span> <span class="cat"><a href="#">Category</a></span><span class="noscreen">,</span> <span class="user"><a href="#">My name</a></span><span class="noscreen">,</span> <span class="comments"><a href="#">Comments</a></span> </p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam pellentesque enim blandit enim bibendum blandit. Integer eu leo ac est aliquet imperdiet. Quisque nec justo id augue posuere malesuada. Nullam ac metus. Cras non leo ut est placerat condimentum. Aliquam ut enim. Quisque non sapien in enim eleifend faucibus. Pellentesque sodales. Mauris auctor arcu sit amet felis. Donec eget enim ut lacus pharetra condimentum. Nulla in felis vel tortor imperdiet consectetuer. Sed id ante.</p>
-          <p class="btn-more box noprint"><strong><a href="#">Continue</a></strong></p>
-        </div>
-        <hr class="noscreen" />
-        <div class="article">
-          <h2><span><a href="#">This is my second article</a></span></h2>
-          <p class="info noprint"> <span class="date">2007-01-01 @ 00:01</span><span class="noscreen">,</span> <span class="cat"><a href="#">Category</a></span><span class="noscreen">,</span> <span class="user"><a href="#">My name</a></span><span class="noscreen">,</span> <span class="comments"><a href="#">Comments</a></span> </p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam pellentesque enim blandit enim bibendum blandit. Integer eu leo ac est aliquet imperdiet. Quisque nec justo id augue posuere malesuada. Nullam ac metus. Cras non leo ut est placerat condimentum. Aliquam ut enim. Quisque non sapien in enim eleifend faucibus. Pellentesque sodales. Mauris auctor arcu sit amet felis. Donec eget enim ut lacus pharetra condimentum. Nulla in felis vel tortor imperdiet consectetuer. Sed id ante.</p>
-          <p class="btn-more box noprint"><strong><a href="#">Continue</a></strong></p>
-        </div>
-        <hr class="noscreen" />
-        <div class="article">
-          <h2><span><a href="#">This is my first article</a></span></h2>
-          <p class="info noprint"> <span class="date">2007-01-01 @ 00:01</span><span class="noscreen">,</span> <span class="cat"><a href="#">Category</a></span><span class="noscreen">,</span> <span class="user"><a href="#">My name</a></span><span class="noscreen">,</span> <span class="comments"><a href="#">Comments</a></span> </p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam pellentesque enim blandit enim bibendum blandit. Integer eu leo ac est aliquet imperdiet. Quisque nec justo id augue posuere malesuada. Nullam ac metus. Cras non leo ut est placerat condimentum. Aliquam ut enim. Quisque non sapien in enim eleifend faucibus. Pellentesque sodales. Mauris auctor arcu sit amet felis. Donec eget enim ut lacus pharetra condimentum. Nulla in felis vel tortor imperdiet consectetuer. Sed id ante.</p>
-          <p class="btn-more box noprint"><strong><a href="#">Continue</a></strong></p>
-        </div>
-        <hr class="noscreen" />
-      </div>
-      <div id="col" class="noprint">
-        <div id="col-in">
-          <h3><span><a href="#">About Me</a></span></h3>
-          <div id="about-me">
-            <p><img src="design/tmp_photo.gif" id="me" alt="Yeah, it´s me!" /> <strong>Jane Doe</strong><br />
-              Age: 26<br />
-              Dallas, TX<br />
-              <a href="#">Profile on MySpace</a></p>
-          </div>
-          <hr class="noscreen" />
-          <h3 ><span>Category</span></h3>
-          <ul id="category">
-            <li id="category-active"><a href="#">Selected category</a></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">Category</a></li>
-          </ul>
-          <hr class="noscreen" />
-          <h3><span>Archive</span></h3>
-          <ul id="archive">
-            <li><a href="#">January 2007</a></li>
-            <li><a href="#">December 2006</a></li>
-            <li><a href="#">November 2006</a></li>
-            <li><a href="#">October 2006</a></li>
-            <li><a href="#">September 2006</a></li>
-            <li id="archive-active"><a href="#">August 2006</a></li>
-            <li><a href="#">July 2006</a></li>
-            <li><a href="#">June 2006</a></li>
-            <li><a href="#">May 2006</a></li>
-            <li><a href="#">April 2006</a></li>
-            <li><a href="#">March 2006</a></li>
-            <li><a href="#">February 2006</a></li>
-            <li><a href="#">January 2006</a></li>
-          </ul>
-          <hr class="noscreen" />
-          <h3><span>Links</span></h3>
-          <ul id="links">
-            <li><a href="#">Something</a></li>
-            <li><a href="#">Something</a></li>
-            <li><a href="#">Something</a></li>
-            <li><a href="#">Something</a></li>
-            <li><a href="#">Something</a></li>
-          </ul>
-          <hr class="noscreen" />
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="footer">
-    <div id="top" class="noprint">
-      <p><span class="noscreen">Back on top</span> <a href="#header" title="Back on top ^">^<span></span></a></p>
-    </div>
-    <hr class="noscreen" />
-    <p id="createdby">created by <a href="http://www.nuvio.cz">Nuvio | Webdesign</a> </p>
-    <p id="copyright">&copy; 2007 <a href="#">My Name</a> | RubyX by <a href="http://www.kendahlin.com/">Ken Dahlin</a> based entirely on <a href="#">CrystalX</a></p>
-  </div>
-</div>
-</body>
-</html>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Light Blue Theme</title>
+  <style type="text/css">
+    html,
+    #page {
+      padding: 0;
+      margin: 0;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      color: #4a4a4a;
+      font: normal 12px/2.0em Sans-Serif;
+      background-color: #e6f7ff; /* Light Blue Background */
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: darkred;
+    }
+
+    #page {
+      background: #fff;
+    }
+
+    #header,
+    #footer,
+    #top-nav,
+    #content,
+    #content #contentbar,
+    #content #sidebar {
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Logo */
+    #logo {
+      padding: 0;
+      width: auto;
+      float: left;
+    }
+
+    #logo h1 a,
+    h1 a:hover {
+      color: darkred;
+      text-decoration: none;
+    }
+
+    #logo h1 span {
+      color: #f8dbdb;
+    }
+
+    /* Header */
+    #header {
+      background: #fff;
+    }
+
+    #header-inner {
+      margin: 0 auto;
+      padding: 0;
+      width: 970px;
+    }
+
+    /* Feature */
+    .feature {
+      background: #ff6666; /* Deep Red Background */
+      padding: 18px;
+    }
+
+    .feature-inner {
+      margin: auto;
+      width: 970px;
+    }
+
+    .feature-inner h1 {
+      color: #f8dbdb;
+      font-size: 32px;
+    }
+
+    /* Menu */
+    #top-nav {
+      margin: 0 auto;
+      padding: 0px 0 0;
+      height: 37px;
+      float: right;
+    }
+
+    #top-nav ul {
+      list-style: none;
+      padding: 0;
+      height: 37px;
+      float: left;
+    }
+
+    #top-nav ul li {
+      margin: 0;
+      padding: 0 0 0 8px;
+      float: left;
+    }
+
+    #top-nav ul li a {
+      display: block;
+      margin: 0;
+      padding: 8px 20px;
+      color: #ff6666; /* Deep Red Text */
+      text-decoration: none;
+    }
+
+    #top-nav ul li.active a,
+    #top-nav ul li a:hover {
+      color: #f8dbdb;
+    }
+
+    /* Content */
+    #content-inner {
+      margin: 0 auto;
+      padding: 10px 0;
+      width: 970px;
+      background: #fff;
+    }
+
+    #content #contentbar {
+      margin: 0;
+      padding: 0;
+      float: right;
+      width: 760px;
+    }
+
+    #content #contentbar .article {
+      margin: 0 0 24px;
+      padding: 0 20px 0 15px;
+    }
+
+    #content #sidebar {
+      padding: 0;
+      float: left;
+      width: 200px;
+    }
+
+    #content #sidebar .widget {
+      margin: 0 0 12px;
+      padding: 8px 8px 8px 13px;
+      line-height: 1.4em;
+      background-color: #e6f7ff; /* Light Blue Widget Background */
+    }
+
+    #content #sidebar .widget h3 a {
+      text-decoration: none;
+    }
+
+    #content #sidebar .widget ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      color: #4a4a4a;
+    }
+
+    #content #sidebar .widget ul li {
+      margin: 0;
+    }
+
+    #content #sidebar .widget ul li {
+      padding: 4px 0;
+      width: 185px;
+    }
+
+    #content #sidebar .widget ul li a {
+      color: #ff6666; /* Deep Red Link */
+      text-decoration: none;
+      margin-left: -16px;
+      padding: 4px 8px 4px 16px;
+    }
+
+    #content #sidebar .widget ul li a:hover {
+      color: #f8dbdb;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    /* Footerblurb */
+    #footerblurb {
+      background: #f8dbdb;
+      color: #ff6666; /* Deep Red Text */
+    }
+
+    #footerblurb-inner {
+      margin: 0 auto;
+      width: 922px;
+      padding: 24px;
+    }
+
+    #footerblurb .column {
+      margin: 0;
+      text-align: justify;
+      float: left;
+      width: 250px;
+      padding: 0 24px;
+    }
+
+    /* Footer */
+    #footer {
+      background: #fff;
+    }
+
+    #footer-inner {
+      margin: auto;
+      text-align: center;
+      padding: 12px;
+      width: 922px;
+    }
+
+    #footer a {
+      color: #ff6666; /* Deep Red Link */
+      text-decoration: none;
+    }
+
+    /* Clear both sides to assist with div alignment  */
+    .clr {
+      clear: both;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      font-size: 0px;
+      line-height: 0px;
+    }
+  </style>
+  <script type="text/javascript">
+    /* =============================
+        This script generates sample text for the body content. 
+        You can remove this script and any reference to it. 
+         ============================= */
+    var bodyText = ["The smaller your reality, the more convinced you are that you know everything.", "If the facts don't fit the theory, change the facts.", "The past has no power over the present moment.", "This, too, will pass.", "</p><p>You will not be punished for your anger, you will be punished by your anger.", "Peace comes from within. Do not seek it without.", "<h2>Heading</h2><p>The most important moment of your life is now. The most
