--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       display: flex;
       justify-content: center;
     }
+
+    /* Styling for the added image */
+    #custom-image {
+      max-width: 100%;
+      height: auto;
+      margin-top: 20px;
+    }
   </style>
   <script type="text/javascript">
     /* Your existing JavaScript goes here */
@@ -29,14 +36,6 @@
       <div id="header-inner">
         <div id="logo">
           <h1><a href="#">Kolashampan Chess<span></span></a></h1>
-        </div>
-        <div id="top-nav">
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Play Chess</a></li> <!-- You can link this to the chess area below -->
-            <li><a href="#">Help</a></li>
-          </ul>
         </div>
         <div class="clr"></div>
       </div>
@@ -56,19 +55,24 @@
       </div>
     </div>
 
+    <!-- Add the image here -->
+    <img id="custom-image" src="E2n730a.png" alt="Custom Image">
+
     <div id="content">
       <div id="content-inner">
         <main id="contentbar">
           <div class="article">
             <p>
               <!-- Mathematical definition and proof -->
-              <strong>Mathematical Definition:</strong> Let \(f: \mathbb{R} \rightarrow \mathbb{R}\) be a continuous function.
+              <strong>Mathematical Definition:</strong> Let \(f: \mathbb{R} \rightarrow \mathbb{R}\) be a continuous
+              function.
               <br><br>
               <strong>Proof:</strong> For any \(x \in \mathbb{R}\), let \(h\) be an infinitesimally small positive
               quantity. The limit of the difference quotient as \(h\) approaches zero is defined as follows:
               \[f'(x) = \lim_{{h \to 0}} \frac{f(x + h) - f(x)}{h}\]
               <br><br>
-              Ominous Phrases: "Shadows whisper tales of forgotten realms." "In the abyss, silence echoes louder than screams." "The clock ticks, counting down echoes of the past."
+              Ominous Phrases: "Shadows whisper tales of forgotten realms." "In the abyss, silence echoes louder than
+              screams." "The clock ticks, counting down echoes of the past."
             </p>
           </div>
         </main>
@@ -122,7 +126,8 @@
     <!-- Footer -->
     <footer id="footer">
       <div id="footer-inner">
-        <p>&copy; Copyright <a href="#">Your Site</a> &#124; <a href="#">Terms of Use</a> &#124; <a href="#">Privacy Policy</a></p>
+        <p>&copy; Copyright <a href="#">Your Site</a> &#124; <a href="#">Terms of Use</a> &#124; <a href="#">Privacy
+            Policy</a></p>
         <div class="clr"></div>
       </div>
     </footer>
